Moved frameLabels to module root & updated README

--- a/src/demo.hbs
+++ b/src/demo.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Canvas UMD demo</title>
     <style type="text/css">
         body { margin: 0; padding: 0; font-family: arial, helvetica, sans-serif; }
 
@@ -39,7 +40,7 @@
     </div>
     <form action="" name="uploader">
         <input name="file" type="file" />
-        <strong>Animate CC 2017.5</strong>
+        <strong><a href="https://github.com/wittnl/adobe-animate-canvas-umd">Canvas UMD</a> demo</strong>
     </form>
 </div>
 <div id="animation_container">
